Add dark mode toggle to display page
- Added dark mode toggle checkbox to display side menu
- Implemented toggle functionality that saves preference to localStorage
- Toggle state syncs with current dark mode and system preference
- Users can now toggle dark mode without accessing admin page

--- a/public/display-new.html
+++ b/public/display-new.html
@@ -75,6 +75,14 @@
             </div>
             
             <div class="control-group">
+                <label class="checkbox-label">
+                    <input type="checkbox" id="displayDarkModeToggle">
+                    <span class="checkmark"></span>
+                    Dark Mode
+                </label>
+            </div>
+            
+            <div class="control-group">
                 <button class="btn btn-secondary" onclick="openAdminView()">
                     <span class="btn-icon">⚙️</span>
                     Open Admin
