--- a/public/admin-pin.html
+++ b/public/admin-pin.html
@@ -7,6 +7,62 @@
     <meta name="description" content="Enter PIN to access admin panel">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
+        /* CSS Variables */
+        :root {
+            --primary-color: #60a5fa;
+            --secondary-color: #3b82f6;
+            --success-color: #10b981;
+            --warning-color: #f59e0b;
+            --error-color: #ef4444;
+            --text-color: #2d3748;
+            --border-color: #e2e8f0;
+            --background-color: #f7fafc;
+            --card-shadow: 0 4px 15px rgba(0, 0, 0, 0.05);
+            --bg-gradient-start: #60a5fa;
+            --bg-gradient-end: #3b82f6;
+            --card-background: #ffffff;
+            --header-background: rgba(255, 255, 255, 0.95);
+        }
+
+        /* Dark Mode Variables */
+        .dark-mode {
+            --text-color: #e2e8f0;
+            --border-color: #4a5568;
+            --background-color: #1a202c;
+            --card-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
+            --card-background: #2d3748;
+            --header-background: rgba(45, 55, 72, 0.95);
+        }
+
+        /* Theme Colors */
+        .theme-blue {
+            --bg-gradient-start: #60a5fa;
+            --bg-gradient-end: #3b82f6;
+            --primary-color: #60a5fa;
+            --secondary-color: #3b82f6;
+        }
+
+        .theme-green {
+            --bg-gradient-start: #10b981;
+            --bg-gradient-end: #059669;
+            --primary-color: #10b981;
+            --secondary-color: #059669;
+        }
+
+        .theme-purple {
+            --bg-gradient-start: #8b5cf6;
+            --bg-gradient-end: #7c3aed;
+            --primary-color: #8b5cf6;
+            --secondary-color: #7c3aed;
+        }
+
+        .theme-orange {
+            --bg-gradient-start: #f97316;
+            --bg-gradient-end: #ea580c;
+            --primary-color: #f97316;
+            --secondary-color: #ea580c;
+        }
+
         * {
             margin: 0;
             padding: 0;
@@ -15,22 +71,25 @@
 
         body {
             font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, var(--bg-gradient-start) 0%, var(--bg-gradient-end) 100%);
             min-height: 100vh;
             display: flex;
             align-items: center;
             justify-content: center;
             padding: 20px;
+            color: var(--text-color);
+            transition: background 0.3s ease;
         }
 
         .pin-container {
-            background: white;
+            background: var(--card-background);
             border-radius: 20px;
             padding: 40px;
-            box-shadow: 0 20px 60px rgba(0, 0, 0, 0.15);
+            box-shadow: var(--card-shadow);
             text-align: center;
             max-width: 400px;
             width: 100%;
+            transition: background 0.3s ease, box-shadow 0.3s ease;
         }
 
         .logo-section {
@@ -42,7 +101,7 @@
             height: 80px;
             margin: 0 auto 20px;
             border-radius: 20px;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, var(--bg-gradient-start) 0%, var(--bg-gradient-end) 100%);
             display: flex;
             align-items: center;
             justify-content: center;
@@ -52,7 +111,7 @@
         }
 
         h1 {
-            color: #2d3748;
+            color: var(--text-color);
             font-size: 24px;
             font-weight: 600;
             margin-bottom: 8px;
@@ -64,6 +123,10 @@
             margin-bottom: 30px;
         }
 
+        .dark-mode .subtitle {
+            color: #a0aec0;
+        }
+
         .pin-input-container {
             margin-bottom: 30px;
         }
@@ -73,10 +136,10 @@
             padding: 16px;
             font-size: 24px;
             text-align: center;
-            border: 2px solid #e2e8f0;
+            border: 2px solid var(--border-color);
             border-radius: 12px;
-            background: #f7fafc;
-            color: #2d3748;
+            background: var(--card-background);
+            color: var(--text-color);
             font-weight: 600;
             letter-spacing: 8px;
             transition: all 0.3s ease;
@@ -84,9 +147,9 @@
 
         .pin-input:focus {
             outline: none;
-            border-color: #667eea;
-            background: white;
-            box-shadow: 0 0 0 3px rgba(102, 126, 234, 0.1);
+            border-color: var(--primary-color);
+            background: var(--card-background);
+            box-shadow: 0 0 0 3px rgba(96, 165, 250, 0.1);
         }
 
         .pin-input::placeholder {
@@ -95,7 +158,7 @@
         }
 
         .error-message {
-            color: #e53e3e;
+            color: var(--error-color);
             font-size: 14px;
             margin-top: 12px;
             display: none;
@@ -104,7 +167,7 @@
         .btn {
             width: 100%;
             padding: 16px;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, var(--bg-gradient-start) 0%, var(--bg-gradient-end) 100%);
             color: white;
             border: none;
             border-radius: 12px;
@@ -116,7 +179,7 @@
 
         .btn:hover {
             transform: translateY(-2px);
-            box-shadow: 0 8px 25px rgba(102, 126, 234, 0.3);
+            box-shadow: 0 8px 25px rgba(96, 165, 250, 0.3);
         }
 
         .btn:disabled {
@@ -134,8 +197,12 @@
             transition: color 0.3s ease;
         }
 
+        .dark-mode .back-link {
+            color: #a0aec0;
+        }
+
         .back-link:hover {
-            color: #667eea;
+            color: var(--primary-color);
         }
 
         @media (max-width: 480px) {
@@ -180,6 +247,31 @@
     </div>
 
     <script>
+        // Load theme settings
+        function loadThemeSettings() {
+            // Load theme (default to blue)
+            const theme = localStorage.getItem('theme') || 'blue';
+            document.body.classList.add(`theme-${theme}`);
+
+            // Load dark mode preference
+            const storedDarkMode = localStorage.getItem('darkMode');
+            let isDarkMode = false;
+
+            if (storedDarkMode !== null) {
+                isDarkMode = storedDarkMode === 'true';
+            } else {
+                // Use system preference if no stored preference
+                isDarkMode = window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches;
+            }
+
+            if (isDarkMode) {
+                document.body.classList.add('dark-mode');
+            }
+        }
+
+        // Apply theme settings on page load
+        loadThemeSettings();
+
         document.getElementById('pinForm').addEventListener('submit', async function(e) {
             e.preventDefault();
 
